# editor

./: .gitignore  CMakeLists.txt  build.sh  run_tests.sh
editor/: CMakeLists.txt  main.cpp
include/editor/: BumpAllocator.hpp  BumpArena.hpp  InputHandler.hpp  PieceTable.hpp  Renderer.hpp  TypeBuffer.hpp
include/freetype/config/: ftoption.h
include/glad/: glad.h
src/: CMakeLists.txt  main.cpp
src/arenas/: BumpAllocator.cpp
src/glad/: glad.c
src/input/: InputHandler.cpp
src/piece/: PieceTable.cpp
src/renderer/: renderer.cpp
src/shaders/: char-frag-shader.glsl  char-vert-shader.glsl  frag-shader.glsl  quad-frag-shader.glsl  quad-vert-shader.glsl  vert-shader.glsl
src/type_buffer/: TypeBuffer.cpp
tests/: CMakeLists.txt  test_arena.cpp  test_piecetable.cpp  tests.cpp
txtfiles/: hello.txt
